Delphi/Lib/XCGUI.pas

unit XCGUI;
// 1.9.5.8 xcgui www.xcgui.com    by Dasemimi 交流群: 2283362 验证 XCGUIdelphi模块
// timestamp 2016.2.21
interface
//SysUtils;
Type
    LOGFONT = record
    lfHeight : Integer         ;
    lfWidth : Integer          ;
    lfEscapement : Integer     ;
    lfOrientation : Integer    ;
    lfWeight : Integer         ;
    lfItalic : Byte         ;
    lfUnderline : Byte      ;
    lfStrikeOut : Byte      ;
    lfCharSet : Byte        ;
    lfOutPrecision : Byte   ;
    lfClipPrecision : Byte  ;
    lfQuality : Byte        ;
    lfPitchAndFamily : Byte ;
    lfFaceName : Array[ 0..32 ] Of AnsiChar    ;
end;
    TLOGFONT = ^LOGFONT;

Type
    LOGFONTW = record
    lfHeight : Integer         ;
    lfWidth : Integer          ;
    lfEscapement : Integer     ;
    lfOrientation : Integer    ;
    lfWeight : Integer         ;
    lfItalic : Byte         ;
    lfUnderline : Byte      ;
    lfStrikeOut : Byte      ;
    lfCharSet : Byte        ;
    lfOutPrecision : Byte   ;
    lfClipPrecision : Byte  ;
    lfQuality : Byte        ;
    lfPitchAndFamily : Byte ;
    lfFaceName : Array[ 0..32 ] Of WideChar    ;
end;
    TLOGFONTW = ^LOGFONTW;

type
  SIZE  = record
  cx : Integer ;
  cy : Integer ;
end;
TSIZE = ^SIZE ;
type
  POINT = record
  x : Integer;
  y : Integer;
end;
  TPOINT = ^Pointer;
type
  RECT = record
  x : Integer;
  y : Integer;
  cx: Integer;
  cy: Integer;
end;
  TRECT = ^RECT;

type
  POINTF = record
  x : Real;
  y : Real;
end;
  TPOINTF = ^POINTF;
  
type
BorderSize_ = record
 leftSize:Integer;
 topSize:Integer;
 rightSize:Integer;
 bottomSize:Integer;
end;
TBorderSize_ = ^BorderSize_;

TSpaceSize_  = ^BorderSize_;
TPaddingSize_= ^BorderSize_;


type
RECTF = record
 left:Integer;
 top:Integer;
 right:Integer;
 bottom:Integer;
end;
TRECTF = ^RECTF;

type
Position = record
 iRow:Integer;
 iColumn:Integer;
end;
TPosition = ^Position;

type
template_info_i = record
 info:Integer;
end;
Ttemplate_info_i = ^template_info_i;

type
listBox_item_i = record
 nUserData:Integer;
 nHeight:Integer;
 nSelHeight:Integer;
 nState:Integer;
 index:Integer;
 rcItem:RECT;
 hLayout:Integer;
 Info:Integer;
end;
TlistBox_item_i = ^listBox_item_i;

type
listBox_item_Info_i = record
 nUserData:Integer;
 nHeight:Integer;
 nSelHeight:Integer;
end;
TlistBox_item_Info_i = ^listBox_item_Info_i;

type
listView_item_id_i = record
 iGroup:Integer;
 iItem:Integer;
end;
TlistView_item_id_i = ^listView_item_id_i;

type
list_item_i = record
 index:Integer;
 iSubItem:Integer;
 nUserData:Integer;
 nState:Integer;
 rcItem:RECT;
 hLayout:Integer;
 Info:Integer;
end;
Tlist_item_i = ^list_item_i;

type
list_header_item_i = record
 index:Integer;
 nUserData:Integer;
 nState:Integer;
 rcItem:RECT;
 hLayout:Integer;
 Info:Integer;
end;
Tlist_header_item_i = ^list_header_item_i;

type
tree_item_i = record
 nID:Integer;
 nDepth:Integer;
 nState:Integer;
 nHeight:Integer;
 nSelHeight:Integer;
 nUserData:Integer;
 bExpand:LongBool;
 rcItem:RECT;
 hLayout:Integer;
 Info:Integer;
end;
Ttree_item_i = ^tree_item_i;

type
listView_item_i = record
 iGroup:Integer;
 iItem:Integer;
 nUserData:Integer;
 nState:Integer;
 rcItem:RECT;
 hLayout:Integer;
 Info:Integer;
end;
TlistView_item_i = ^listView_item_i;

type
layout_info_i = record
 widthType:Integer;
 heightType:Integer;
 width:Smallint;
 height:Smallint;
end;
Tlayout_info_i = ^layout_info_i;

type
menu_popupWnd_i = record
 hWindow:Integer;
 nParentID:Integer;
end;
Tmenu_popupWnd_i = ^menu_popupWnd_i;

type
menu_drawBackground_i = record
 hMenu:Integer;
 hWindow:Integer;
 nParentID:Integer;
end;
Tmenu_drawBackground_i = ^menu_drawBackground_i;

type
menu_drawItem_i = record
 hMenu:Integer;
 hWindow:Integer;
 nID:Integer;
 nState:Integer;
 rcItem:RECT;
 hIcon:Integer;
 Text:PWideChar;
end;
Tmenu_drawItem_i = ^menu_drawItem_i;

type
monthCal_item_i = record
 nDay:Integer;
 nType:Integer;
 nState:Integer;
 rcItem:RECT;
end;
TmonthCal_item_i = ^monthCal_item_i;



